0.8.2 to current

	Added tree view.  Thanks to filterfalse and Kornel.

	Added :tree command that converts current view into a tree.

	Added :dmap, :dnoremap and :dunmap commands to configure mappings in
	dialogs.  Thanks to Sassan Haradji (a.k.a. sassanh).

	Added "tree" parameter to :sync! that enables synchronization of tree
	view.  Thanks to filterfalse.

	Try to save and restore terminal state while running external
	applications.  Thanks to Losiara.

	Enable restoring files from trash from custom views.

	View current directory on ".." for quickview/view mode.  Thanks to
	filterfalse.

	Make :put, :touch and :mkdir accept [line] range, which can be used to
	specify target position in tree-view.  Thanks to filterfalse.

	Enable cancellation of tree preview construction.  Thanks to filterfalse.

	Partially return progress report for menus.  Was disabled by introduction
	of null byte heuristic.

	Accept paths in :touch, not just file names.  Thanks to filterfalse.

	Consider trailing slash for directories or symbolic links that point to
	directories for patterns in 'classify'.

	Do not resolve symbolic links in directory preview.  Thanks to
	filterfalse.

	getpanetype() got new value ("tree") to indicate tree-view.  Thanks to
	filterfalse.

	Disallow applying :chmod on ".." entry.

	Disallow moving/copying/linking files into custom view (put is forbidden,
	so makes sense to forbid these too).

	Disallow selecting ".." entry with :select command.

	Fixed redirecting stdout of background commands to /dev/null, which could
	be unwritable descriptor.  Thanks to c02y.

	Fixed inconsistent file name demangling on moving files from trash in
	custom view.

	Fixed decreasing number of selected files after zd operation.

	Fixed wrong whole value completion of string list options if entered value
	contains a comma (,).

	Fixed displaying of previous status bar message on 'hlsearch' 'noincsearch'
	when match occurs.  Thanks to filterfalse.
