@@ -1898,6 +1898,7 @@ their content (e.g. regular files in views)
  \- Device \- color of block and character devices
  \- Executable \- color of executable files
  \- Fifo \- color of fifo pipes
+ \- CmpMismatch \- color of mismatched files in side-by-side comparison by path
 
 Available colors:
  \- \-1 or default or none \- default or transparent
